2009-11-19  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_sepermit/pam_sepermit.c(sepermit_match): Return
	PAM_AUTH_ERR from the module if sepermit_lock() fails.

2009-11-18  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_access/pam_access.c(user_match): Revert the netgroup
	match to the original behavior, add new syntax for adding the local
	hostname.
	* modules/pam_access/access.conf.5.xml: Document the new syntax
	for adding the local hostname to the netgroup match.

2009-11-10  Thorsten Kukuk  <kukuk@suse.de>

	* doc/man/pam_get_authtok.3.xml: Document pam_get_authtok_noverify
	and pam_get_authtok_verify.

	* libpam/Makefile.am (libpam_la_LDFLAGS): Bump revesion of libpam.

	* libpam/pam_get_authtok.c (pam_get_authtok_internal): Renamed
	from pam_get_authtok, add flags argument, always check return
	values.

	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Use
	pam_get_authtok_noverify and pam_get_authtok_verify.

	* libpam/include/security/pam_ext.h: Add prototypes for
	pam_get_authtok_noverify and pam_get_authtok_verify.

	* libpam/libpam.map: Add new pam_get_authtok_* functions.

2009-11-02  Ani Peter <anipeter@fedoraproject.org>

	* po/ml.po: Updated translations.

2009-11-02  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_sepermit/Makefile.am: Add sepermit.conf(5) manual page.
	* modules/pam_sepermit/pam_sepermit.8.xml: Add reference to
	sepermit.conf(5). Drop some redundant text.
	* modules/pam_sepermit/sepermit.conf.5.xml: New file.

	* modules/pam_sepermit/pam_sepermit.c(sepermit_match): Implement the ignore
	option in sepermit.conf.

2009-10-29  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_xauth/Makefile.am: Link with libselinux.
	* modules/pam_xauth/pam_xauth.c(pam_sm_open_session): Call
	setfscreatecon() if selinux is enabled to create the .xauth file
	with the right label. Original idea by Dan Walsh.

2009-10-08  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_tty_audit/pam_tty_audit.8.xml: Add notice about aureport
	add SEE ALSO section.
